--- a/src/skin/frontend/rwd/default/css/magesetup/checkout.css
+++ b/src/skin/frontend/rwd/default/css/magesetup/checkout.css
@@ -58,7 +58,9 @@
     clear: both;
     margin: 0;
     padding: 15px 10px;
-    text-align: right
+    text-align: right;
+    background-color: #fbfaf6;
+    border-top: 1px solid #ededed;
 }
 
 .checkout-multishipping-overview .additional-information {
