--- a/src/app/design/frontend/base/default/template/magesetup/delivery_time.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/delivery_time.phtml
@@ -24,6 +24,6 @@
 ?>
 <?php if ( Mage::getStoreConfigFlag('catalog/price/display_delivery_time_on_prod_detail') && $this->getProduct()->getDeliveryTime()): ?>
     <p class="delivery-time">
-        <?php echo $this->__('Delivery Time') ?>: <?php echo $this->getProduct()->getDeliveryTime() ?>
+        <?php echo $this->__('Delivery Time') ?>: <?php echo Mage::helper('magesetup')->getDeliveryTimeFromProduct($this->getProduct()) ?>
     </p>
 <?php endif ?>
